Fix validated form alignment.

--- a/app/javascript/components/form/checkbox-input/styles.css
+++ b/app/javascript/components/form/checkbox-input/styles.css
@@ -1,4 +1,5 @@
-.form-field .custom-control.custom-checkbox {
+.form-field .custom-control.custom-checkbox,
+.form-group .custom-control.custom-checkbox {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
